test more edge cases